test/bad/no-main.mac


int maine () {
    return 0;
}